<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="welcome">Welcome to Nickelheim!</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="view_account">View Account</string>
    <string name="login">Login</string>
    <string name="userName">User Name:</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email Address</string>
    <string name="reEnter">Retype password:</string>
    <string name="password">Password:</string>
    <string name="welcomeL">Welcome to the login screen!</string>
    <string name="welcomeR">Welcome to the register screen!</string>
    <string name="app_name">Nickelheim</string>
    <string name="button_start_login">Login</string>
    <string name="button_start_register">Register</string>
    <string name="reg_fname">First Name</string>
    <string name="reg_lname">Last Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Retype password</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_activity">Login</string>
    <string name="button_attempt_register">Register!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="success">Success</string>
    <string name="login_success">Login Success</string>
    <string name="title_activity_login_success">LoginSuccessActivity</string>
    <string name="title_activity_registration_success">RegistrationSuccessActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_abstract_create_account">AbstractCreateAccountActivity</string>
    <string name="title_activity_create_account_success">CreateAccountSuccessActivity</string>
    <string name="my_account">My Account</string>
    <string name="balance">Balance</string>
    <string name="transaction">Transaction</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="amount">Amount</string>
    <string name="accountName">Account Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="view_report">View Report</string>
    <string name="title_activity_report">CreateReportActivity</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="hello_world">Hello world!</string>
    <string name="mmddyyyy">mmddyyyy</string>
    <string name="create_report">Create Report</string>
    <string name="title_activity_create_report_success">CreateReportSuccessActivity</string>
    <string name="comment">Comment</string>
    <string name="report">Report</string>

</resources>
