<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/create_account_first_name_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" >
        
        <requestFocus />
    </EditText>


    <EditText
        android:id="@+id/create_account_last_name_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_account_first_name_field"
        android:layout_below="@+id/create_account_first_name_field"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:onClick="attemptCreateAccount"
        android:text="@string/create_account" />

    <EditText
        android:id="@+id/create_account_balance_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/create_account_email_field"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/balance" />

    <EditText
        android:id="@+id/create_account_email_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_account_balance_field"
        android:layout_alignLeft="@+id/create_account_last_name_field"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

</RelativeLayout>